--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-              <img src="/assets/img/girl1.png" class="img-offers1" alt="Profile Image">
+              <img src="assets/img/girl1.png" class="img-offers1" alt="Profile Image">
           </div>
       </div>
   </div>
