--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -11,3 +11,8 @@
     height: 330px; /* Adjust the height as needed */
     object-fit: cover;
   }
+ 
+.card-title{
+  font-size: 1rem;
+  font-weight: 600;
+}
