--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,7 +10,7 @@
                   <div class="card-body">
                       <h1>Data</h1>
                       <!-- <p class="card-text">A brief description of the project. This can include key features, technologies used, and the project's purpose.</p> -->
-                      <a href="data" class="btn btn-primary">View Project</a>
+                      <a routerLink="/data" class="btn btn-primary">View Project</a>
                   </div>
               </div>
           </div>
@@ -21,7 +21,7 @@
                   <div class="card-body">
                       <h1>Programming</h1>
                       <!-- <p class="card-text">A brief description of the project. This can include key features, technologies used, and the project's purpose.</p> -->
-                      <a href="programming" class="btn btn-primary">View Project</a>
+                      <a routerLink="/programming" class="btn btn-primary">View Project</a>
                   </div>
               </div>
           </div>
