--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -14,8 +14,9 @@
       <ul *ngIf="isProjectMenuOpen" class="nested-list">
         <li><a mat-list-item routerLink="data">Data</a></li>
         <li><a mat-list-item routerLink="programming">Programming</a></li>
+        <li><a mat-list-item routerLink="qa">QA</a></li>
+        <li><a mat-list-item routerLink="blog">Blog</a></li>
       </ul>
-
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
